// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building domain entity extension source map should have correct line, column, text 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "documentation": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 37,
    "line": 2,
    "tokenText": "[10]",
  },
  "metaEdName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "namespaceInfo": Object {
    "column": 0,
    "line": 1,
    "tokenText": "Begin Namespace",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
}
`;

exports[`when building domain entity extension with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 7, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 7, token: TrailingText",
]
`;

exports[`when building domain entity extension with lowercase domain entity extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Domain Entityentity', column: 16, line: 2, token: entity",
  "no viable alternative at input 'Domain Entityentity', column: 16, line: 2, token: entity",
]
`;

exports[`when building domain entity extension with no domain entity extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Domain Entityadditions', column: 17, line: 2, token: additions",
  "no viable alternative at input 'Domain Entityadditions', column: 17, line: 2, token: additions",
]
`;

exports[`when building domain entity extension with no property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 3, token: End Namespace",
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 3, token: End Namespace",
]
`;

exports[`when building duplicate domain entity extensions should have validation failures for each entity: when building duplicate domain entity extensions should have validation failures for each entity -> DEX 1 message 1`] = `"Domain Entity Extension named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate domain entity extensions should have validation failures for each entity: when building duplicate domain entity extensions should have validation failures for each entity -> DEX 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 7,
  "tokenText": "Domain Entity",
}
`;

exports[`when building duplicate domain entity extensions should have validation failures for each entity: when building duplicate domain entity extensions should have validation failures for each entity -> DEX 2 message 1`] = `"Domain Entity Extension named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate domain entity extensions should have validation failures for each entity: when building duplicate domain entity extensions should have validation failures for each entity -> DEX 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;
